<resources>
    <string name="app_name">Smart Gardening</string>
    <string name="plant_name">Plant Name</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pharetra ex at est vulputate, id ultricies nulla feugiat. Ut ultricies ex dui, eget elementum augue sollicitudin ut. Suspendisse ultricies eu ipsum vitae convallis. Proin augue urna, auctor quis ex eget, varius sodales ipsum egestas.</string>
    <string name="plant_latin_name">Plant Latin Name</string>
    <string name="habitat">Habitat:</string>
    <string name="best_placing">Best placed at:</string>
    <string name="market_price">Market price:</string>
    <string name="possible_diseases">Possible diseases:</string>
    <string name="plant_image">Image of Plant</string>
    <string name="clear_history">Clear History</string>
    <string name="clear_history_message">You won\'t be able to undo this action</string>
    <string name="no_history">No Detection History</string>
    <string name="details">Details</string>
    <string name="disease">Disease</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_to_see_details">Click to see details</string>
    <string name="type_of_disease">Type of disease:</string>
    <string name="cause">Cause:</string>
    <string name="resolve">Best treatment:</string>
    <string name="about_this_plant">About This Plant</string>
    <string name="watering">Watering:</string>
    <string name="fertilizer">Fertilizer:</string>
    <string name="tips">Tips:</string>
</resources>