<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/txt_disease_name"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Disease name" />

        <TextView
            android:id="@+id/txt_disease_latin_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_disease_name"
            tools:text="(latin name)" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:justificationMode="inter_word"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_disease_latin_name" />

        <TextView
            android:id="@+id/tv_type_deisease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:text="@string/type_of_disease"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_description" />

        <TextView
            android:id="@+id/txt_type_of_disease"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="17dp"
            android:justificationMode="inter_word"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_type_deisease"
            tools:text="Type of disease text" />


        <TextView
            android:id="@+id/tv_habitat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="13dp"
            android:text="@string/habitat"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_type_of_disease" />

        <TextView
            android:id="@+id/txt_habitat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:layout_marginStart="8dp"
            android:justificationMode="inter_word"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_habitat"
            tools:text="Disease habitat text" />

        <TextView
            android:id="@+id/tv_cause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="13dp"
            android:text="@string/cause"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_habitat" />

        <TextView
            android:id="@+id/txt_cause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:layout_marginStart="8dp"
            android:justificationMode="inter_word"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cause"
            tools:text="Cause of disease text" />

        <TextView
            android:id="@+id/tv_treatment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginStart="8dp"
            android:text="@string/resolve"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_cause" />

        <TextView
            android:id="@+id/txt_best_treatment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:layout_marginStart="8dp"
            android:justificationMode="inter_word"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_treatment"
            tools:text="Best treatment text" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>